--- a/src/app/groupe-competence/add-groupe-competence/add-groupe-competence.component.scss
+++ b/src/app/groupe-competence/add-groupe-competence/add-groupe-competence.component.scss
@@ -68,3 +68,17 @@ label
      height: auto;
 
 }
+.example-chip-list {
+  width: 100%;
+}
+ng-multiselect-dropdown{
+  color: darkcyan;
+}
+.title
+{
+  text-align: center;
+  font-family: Salsa;
+  font-size: 30px;
+  color: #34936e;
+  font-weight: bold;
+}
