--- a/src/app/groupe-competence/add-groupe-competence/add-groupe-competence.component.html
+++ b/src/app/groupe-competence/add-groupe-competence/add-groupe-competence.component.html
@@ -1,38 +1,41 @@
 <div class="container p-5 mt-5 bg-light shadow p-3 mb-5 bg-white rounded ">
-    <form class="form-group">
+    <div class="title">
+        <h1 class="title">AJOUTER GROUPE DE COMPETENCE</h1>
+      </div>
+    <form class="form-group" method="post" (ngSubmit)="OnSubmit(formField)" #formField="ngForm" name="formField">
         <div class="form-group">
-            <label for="exampleFormControlInput1" class="form-label">Libellé</label>
-            <input class="form-control control" type="text" placeholder="" value="Développer le back-end d’une application web">
+            <label for="exampleFormControlInput1" class="form-label pb-4">Libellé</label>
+            <input class="form-control control" type="text" placeholder="Développer le back-end d’une application web" name="libelle"  
+             ngModel required  #myLibelle="ngModel">
+             <small class="text-danger" *ngIf="!myLibelle.value && !myLibelle.dirty">Libelle obligatoire</small>
         </div>  
         <div class="form-group mt-5">
-            <label for="exampleFormControlTextarea1">Description</label>
-            <textarea class="form-control " id="exampleFormControlTextarea1" rows="3"></textarea>
+            <label for="exampleFormControlTextarea1" class="form-label pb-4">Description</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="descriptif" 
+              ngModel required  #myDescript="ngModel" placeholder="Description">
+              <small class="text-danger" *ngIf="!myDescript.value && !myDescript.dirty">Description obligatoire</small>
+            </textarea>
         </div>
         <div class="form-group mt-5">
-            <!--<label for="exampleFormControlTextarea1">Compétence</label>
-            <textarea class="form-control " id="exampleFormControlTextarea1" rows="3"></textarea>-->
-            <label for="exampleFormControlInput1" class="form-label">Libellé</label>
+            <label for="exampleFormControlInput1" class="form-label pb-4">Competence</label>
             <div class="competence p-3">
-                <div class="chip">
-                    Créer une base de données
-                    <span class="closebtn" onclick="this.parentElement.style.display='none'">&times;</span>
-                </div>  
-                <div class="chip">
-                    Développer les composants d’accès aux données
-                    <span class="closebtn" onclick="this.parentElement.style.display='none'">&times;</span>
-                </div> 
-                <div class="chip">
-                    Maquetter une application
-                    <span class="closebtn" onclick="this.parentElement.style.display='none'">&times;</span>
-                </div>
-                <div class="chip">
-                    Développer le back end d'une application
-                    <span class="closebtn" onclick="this.parentElement.style.display='none'">&times;</span>
-                </div>  
+                <ng-multiselect-dropdown class="p-3" 
+                        [placeholder]="'Ajouter libelle(s)'"
+                        [data]="dropdownList"
+                        [(ngModel)]="selectedItems"
+                        [settings]="dropdownSettings"
+                        (onSelect)="onItemSelect($event)"
+                        (onSelectAll)="onSelectAll($event)"
+                        name="competence" ngModel required  #myLibelle="ngModel"
+                        >
+            </ng-multiselect-dropdown>
             </div>
         </div>
+       
        <div class="text-center mt-3">
-        <button type="button" class="btn btn-outline-success btn-lg">Enrégistrer</button>
+        <button type="submit" class="btn btn-outline-success btn-lg">Enrégistrer</button>
        </div>
     </form>
 </div>
+
+
