--- a/src/app/groupe-competence/edit-groupe-competence/edit-groupe-competence.component.html
+++ b/src/app/groupe-competence/edit-groupe-competence/edit-groupe-competence.component.html
@@ -1,1 +1,64 @@
-<p>edit-groupe-competence works!</p>
+<div class="container p-5 mt-5 bg-light shadow p-3 mb-5 bg-white rounded ">
+    <div class="title">
+        <h1 class="title">MODIFIER GROUPE DE COMPETENCE</h1>
+      </div>
+    <form class="form-group" method="post" (ngSubmit)="OnSubmit(formField)" #formField="ngForm" name="formField">
+        <div class="form-group">
+            <label for="exampleFormControlInput1" class="form-label pb-4">Libellé</label>
+            <input class="form-control control" type="text" placeholder="Développer le back-end d’une application web" [(ngModel)]="grpcomp.libelle"
+             name="libelle"  required  #myLibelle="ngModel">
+             <small class="text-danger" *ngIf="!myLibelle.value && !myLibelle.dirty">Libelle obligatoire</small>
+        </div>  
+        <div class="form-group mt-5">
+            <label for="exampleFormControlTextarea1" class="form-label pb-4">Description</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="descriptif" 
+            [(ngModel)]="grpcomp.descriptif" required  #myDescript="ngModel" placeholder="Description">
+              <small class="text-danger" *ngIf="!myDescript.value && !myDescript.dirty">Description obligatoire</small>
+            </textarea>
+        </div>
+        <div class="form-group mt-5">
+            <label for="exampleFormControlInput1" class="form-label pb-4">Competence associée(s)</label>
+            <div class="competence p-3">
+                
+                <ng-multiselect-dropdown class="p-3" 
+                        [placeholder]="'libelle(s)'"
+                        [data]="dropdownList"
+                        [(ngModel)]="selectedItems"
+                        [settings]="dropdownSettings"
+                        (onSelect)="onItemSelect($event)"
+                        (onSelectAll)="onSelectAll($event)"
+                        name="competence" ngModel required  #myLibelle="ngModel"
+                        >
+                </ng-multiselect-dropdown>
+             
+            </div>
+        </div>
+        <div class="form-group mt-5">
+            <div class="competence p-3">
+                <div class="accordion col-" id="accordionExample">
+                    <div class="accordion-itemt">
+                        <h2 class="accordion-header text-center" id="headingOne">
+                            <button class="accordion-button btn btn-success  mt-2" id="competence" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                AJOUETR UNE COMPETENCE
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <div class="form-group">
+                                    <label for="exampleFormControlInput1" class="form-label pb-4">Libellé</label>
+                                    <input class="form-control control" type="text" placeholder="Libellé competence" ngModel
+                                     name="competences"    #myLibelleComp="ngModel">
+                                </div>  
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>    
+       <div class="text-center mt-3">
+        <button type="submit" class="btn btn-outline-success btn-lg">MODIFIER</button>
+       </div>
+    </form>
+</div>
+
+
