--- a/src/app/groupe-competence/list-groupe-competence/list-groupe-competence.component.html
+++ b/src/app/groupe-competence/list-groupe-competence/list-groupe-competence.component.html
@@ -1,234 +1,62 @@
-<button routerLink="add" type="button" class="btn btn-success m-5">Ajouter</button>
+
+    <button routerLink="add" type="button" class="btn btn-success m-5">Ajouter</button>
+
 <div class="row ml-3">
     <!--divider-->
-    <div class="card col-md-2 col-sm-2 col-xs-6 ml-5">
+    <div class="card col-md-2 col-sm-2 col-xs-6 ml-5" *ngFor="let element of grpcomp; let i = index" [attr.data-index]="i">
         <div class="card-header">
-            <h5>
-                Libellé
-                <a class="float-right" routerLink="edit"> 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                    </svg>
-                </a>
+            <h5 class="mt-3">
+                {{element.libelle}}
             </h5>      
+            <div class="float-right">
+                <button class="btn action" style="background-color: none !important;" routerLink="edit/{{element.id}}">
+                    <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(255, 255, 255)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 14.66V20a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h5.34"></path><polygon points="18 2 22 6 12 16 8 16 8 12 18 2"></polygon></svg>
+                   </button> 
+                   <button class="btn action" style="background-color: none !important;" (click)="OnDelete(element.id)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="4" stroke-linecap="square" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                </button>
+            </div>
         </div>
         <div class="card-body">
-            <h5 class="card-title">Description</h5>
+            <h5 class="card-title">{{element.descriptif}}{{i}}</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <hr class="dropdown-divider">
-                <h5>Compétences</h5>
-            <hr class="dropdown-divider">
-                <h5>Tags</h5>
-        </div>
-    </div>  
+            <div class="accordion" id="accordionExample{{i}}">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="heading{{i}}">
+                        <a class="accordion-button w-100" id="link" type="button" data-bs-toggle="collapse" 
+                        [attr.data-bs-target]="'#collapse'+i"  aria-expanded="false" [attr.aria-controls]="'collapse'+i">
+                            Competence
+                        </a>
+                    </h2>
+                    <div id="collapse{{i}}" class="panel-collapse collapse show" [attr.aria-labelledby]="'heading'+i" [attr.data-bs-parent]="'#accordionExample'+i">
+                        <div class="accordion-body" *ngFor="let comp of element.competence">
+                            <h4>{{comp.libelle}}</h4>
+                            <hr class="dropdown-divider">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion" id="accordionExample{{i+100000}}">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne{{i+100000}}">
+                        <a class="accordion-button w-100" id="link" type="button" data-bs-toggle="collapse" 
+                        [attr.data-bs-target]="'#collapse'+(i+100000)"  aria-expanded="false" [attr.aria-controls]="'collapse'+(i+100000)">
+                            Tags
+                        </a>
+                    </h2>
+                    <div id="collapse{{i+100000}}" class="panel-collapse collapse show" [attr.aria-labelledby]="'headingOne'+(i+100000)" [attr.data-bs-parent]="'#accordionExample'+(i+100000)">
+                        <div class="accordion-body">
+                            <h4>Tags</h4>
+                            <hr class="dropdown-divider">
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-    <!--divider-->
-    <div class="card col-md-2 col-sm-2 col-xs-6 ml-5">
-        <div class="card-header">
-            <h5>
-                Libellé
-                <a class="float-right" routerLink="edit"> 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                    </svg>
-                </a>
-            </h5>      
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Description</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <hr class="dropdown-divider">
-                <h5>Compétences</h5>
-            <hr class="dropdown-divider">
-                <h5>Tags</h5>
-        </div>
-    </div>  
-
-     <!--divider-->
-     <div class="card col-md-2 col-sm-2 col-xs-6 ml-5">
-        <div class="card-header">
-            <h5>
-                Libellé
-                <a class="float-right" routerLink="edit"> 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                    </svg>
-                </a>
-            </h5>      
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Description</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <hr class="dropdown-divider">
-                <h5>Compétences</h5>
-            <hr class="dropdown-divider">
-                <h5>Tags</h5>
-        </div>
-    </div>  
-
-     <!--divider-->
-     <div class="card col-md-2 col-sm-2 col-xs-6 ml-5">
-        <div class="card-header">
-            <h5>
-                Libellé
-                <a class="float-right" routerLink="edit"> 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                    </svg>
-                </a>
-            </h5>      
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Description</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <hr class="dropdown-divider">
-                <h5>Compétences</h5>
-            <hr class="dropdown-divider">
-                <h5>Tags</h5>
-        </div>
-    </div>  
-
-     <!--divider-->
-     <div class="card col-md-2 col-sm-2 col-xs-6 ml-5">
-        <div class="card-header">
-            <h5>
-                Libellé
-                <a class="float-right" routerLink="edit"> 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                    </svg>
-                </a>
-            </h5>      
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Description</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <hr class="dropdown-divider">
-                <h5>Compétences</h5>
-            <hr class="dropdown-divider">
-                <h5>Tags</h5>
-        </div>
-    </div>  
-
-     <!--divider-->
-     <div class="card col-md-2 col-sm-2 col-xs-6 ml-5">
-        <div class="card-header">
-            <h5>
-                Libellé
-                <a class="float-right" routerLink="edit"> 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                    </svg>
-                </a>
-            </h5>      
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Description</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <hr class="dropdown-divider">
-                <h5>Compétences</h5>
-            <hr class="dropdown-divider">
-                <h5>Tags</h5>
-        </div>
-    </div>  
-
-     <!--divider-->
-     <div class="card col-md-2 col-sm-2 col-xs-6 ml-5">
-        <div class="card-header">
-            <h5>
-                Libellé
-                <a class="float-right" routerLink="edit"> 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                    </svg>
-                </a>
-            </h5>      
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Description</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <hr class="dropdown-divider">
-                <h5>Compétences</h5>
-            <hr class="dropdown-divider">
-                <h5>Tags</h5>
-        </div>
-    </div>  
-
-     <!--divider-->
-     <div class="card col-md-2 col-sm-2 col-xs-6 ml-5">
-        <div class="card-header">
-            <h5>
-                Libellé
-                <a class="float-right" routerLink="edit"> 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                    </svg>
-                </a>
-            </h5>      
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Description</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <hr class="dropdown-divider">
-                <h5>Compétences</h5>
-            <hr class="dropdown-divider">
-                <h5>Tags</h5>
-        </div>
-    </div>  
-
-     <!--divider-->
-     <div class="card col-md-2 col-sm-2 col-xs-6 ml-5">
-        <div class="card-header">
-            <h5>
-                Libellé
-                <a class="float-right" routerLink="edit"> 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                    </svg>
-                </a>
-            </h5>      
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Description</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <hr class="dropdown-divider">
-                <h5>Compétences</h5>
-            <hr class="dropdown-divider">
-                <h5>Tags</h5>
-        </div>
-    </div>  
-
-     <!--divider-->
-    <div class="card col-md-2 col-sm-2 col-xs-6 ml-5">
-        <div class="card-header">
-            <h5>
-                Libellé
-                <a class="float-right" routerLink="edit"> 
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                    </svg>
-                </a>
-            </h5>      
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Description</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <hr class="dropdown-divider">
-                <h5>Compétences</h5>
-            <hr class="dropdown-divider">
-                <h5>Tags</h5>
-        </div>
-    </div>  
-
-
+                </div>
+        </div>  
 </div>
+
+
+
