--- a/src/app/profil/edit-profil/edit-profil.component.html
+++ b/src/app/profil/edit-profil/edit-profil.component.html
@@ -4,10 +4,10 @@
       <h1>MODIFIER UN PROFIL</h1>
     </div>
     <!--<form #f="ngForm" name="userPost" (ngSubmit)="onSubmit()">-->
-    <form  name="userPost">
+    <form  method="post" (ngSubmit)='OnSubmit(Update)' #Update="ngForm">
           <div class=" form-group  col-md-6 col-sm-6 col-xs-12">
               <label for="inputLibelle">Libellé</label>
-              <input type="text" class="form-control" id="inputLibelle" value="ADMIN" matInput name="libelle"  required>
+              <input type="text" class="form-control" id="inputLibelle" name="libelle" [(ngModel)]="data.libelle" required #Libelle="ngModel">
               <!--<mat-error *ngIf="emailFormControl.hasError('required')">Prénom est <strong>obligatoire</strong></mat-error>-->
           </div>
          <div class="form-group col-md-6 col-sm-6 col-xs-12">
