--- a/src/app/profils-sortie/edit-profil-sortie/edit-profil-sortie.component.html
+++ b/src/app/profils-sortie/edit-profil-sortie/edit-profil-sortie.component.html
@@ -3,16 +3,15 @@
     <div class="title">
       <h1>MODIFIER UN PROFIL DE SORTIE</h1>
     </div>
-    <!--<form #f="ngForm" name="userPost" (ngSubmit)="onSubmit()">-->
-    <form  name="userPost">
-          <div class=" form-group  col-md-6 col-sm-6 col-xs-12">
-              <label for="inputLibelle">Libellé</label>
-              <input type="text" class="form-control" id="inputLibelle" value="ADMIN" matInput name="libelle"  required>
-              <!--<mat-error *ngIf="emailFormControl.hasError('required')">Prénom est <strong>obligatoire</strong></mat-error>-->
-          </div>
-         <div class="form-group col-md-6 col-sm-6 col-xs-12">
-               <input type="submit" name="envoyer" class="form-control btn btn-outline-success mt-5 envoyer" value="ENVOYER">
-         </div>
-    </form>
+    <form  method="post" (ngSubmit)='OnSubmit(Update)' #Update="ngForm">
+      <div class=" form-group  col-md-6 col-sm-6 col-xs-12">
+          <label for="inputLibelle">Libellé</label>
+          <input type="text" class="form-control" id="inputLibelle" name="libelle" [(ngModel)]="data.libelle" required #Libelle="ngModel">
+          <!--<mat-error *ngIf="emailFormControl.hasError('required')">Prénom est <strong>obligatoire</strong></mat-error>-->
+      </div>
+     <div class="form-group col-md-6 col-sm-6 col-xs-12">
+           <input type="submit" name="envoyer" class="form-control btn btn-outline-success mt-5 envoyer" value="ENVOYER">
+     </div>
+</form>
 </div>
 
