--- a/src/app/users/add-users/add-users.component.html
+++ b/src/app/users/add-users/add-users.component.html
@@ -4,51 +4,49 @@
       <h1>AJOUTER UN UTILISATEUR</h1>
     </div>
     <!--<form #f="ngForm" name="userPost" (ngSubmit)="onSubmit()">-->
-    <form  name="userPost">
+    <form (ngSubmit)='OnSubscribe(userPost)' #userPost="ngForm">
           <div class=" form-group  col-md-6">
               <label for="inputPrenom">Prénom</label>
-              <input type="text" class="form-control" id="inputPrenom" placeholder="Tyson" matInput name="prenom"  required>
-              <!--<mat-error *ngIf="emailFormControl.hasError('required')">Prénom est <strong>obligatoire</strong></mat-error>-->
-          </div>
+              <input type="text" class="form-control" id="inputPrenom" placeholder="Tyson" name="prenom" ngModel required #myFname="ngModel">
+              <small class="text-danger" *ngIf="!myFname.valid && myFname.dirty">Invalid prenom</small> 
+            </div>
           <div class="form-group col-md-6">
               <label for="inputNom">Nom</label>
-              <input type="text" class="form-control" id="inputNom" placeholder="Mike" matInput name="nom"  required>
-            <!--<mat-error *ngIf="emailFormControl.hasError('required')">Nom est <strong>obligatoire</strong></mat-error>-->
+              <input type="text" class="form-control" id="inputNom" placeholder="Mike" name="nom" ngModel required #myLname="ngModel">
+              <small class="text-danger" *ngIf="!myLname.valid && myLname.dirty">Invalid nom</small> 
           </div>
           <div class="form-group col-md-6">
                 <label for="inputEmail">Email</label>
-                <input type="email" class="form-control" id="inputEmail" placeholder="miketyson@gmail.com" matInput name="email"  required>
-                <!--<mat-error *ngIf="emailFormControl.hasError('required')">Email est <strong>obligatoire</strong></mat-error>-->
+                <input type="email" class="form-control" id="inputEmail" placeholder="miketyson@gmail.com" name="email"  ngModel required #myEmail="ngModel">
+                <small class="text-danger" *ngIf="!myEmail.valid && myEmail.dirty">Invalid email</small> 
           </div>
           <div class="form-group col-md-6">
                 <label for="inputPwd">Password</label>
-                <input type="password" class="form-control" id="inputPwd" placeholder="Password" matInput name="password"  required>
-                <!--<mat-error *ngIf="emailFormControl.hasError('required')">Confirmer votre <strong> mot de passe</strong></mat-error>-->
+                <input type="password" class="form-control" id="inputPwd" placeholder="Password" name="password" ngModel required #myPassword="ngModel">
+                <small class="text-danger" *ngIf="!myPassword.valid && myPassword.dirty">Invalid email</small> 
           </div>
           <div class="form-group col-md-6">
                 <label for="inputCpwd">Confirmation Password</label>
-                <input type="password" class="form-control" id="inputCpwd" placeholder="Confirmer password" matInput name="cpassword" required>
-                <!--<mat-error *ngIf="emailFormControl.hasError('required')">Confirmer votre <strong> mot de passe</strong></mat-error>-->
+                <input type="password" class="form-control" id="inputCpwd" placeholder="Confirmer password" name="cpassword" ngModel required #myCpwd="ngModel">
+                <small class="text-danger" *ngIf="!myCpwd.valid && myCpwd.dirty">Invalid email</small> 
           </div>
           <div class="form-group col-md-6">
                 <label for="inputPhone">Téléphone</label>
-                <input type="text" class="form-control" id="inputPhone" placeholder="+221 77 777 77 77" matInput name="telephone" required>
-                <!--<mat-error *ngIf="emailFormControl.hasError('required')">Téléphone est <strong>obligatoire</strong></mat-error>-->
+                <input type="text" class="form-control" id="inputPhone" placeholder="+221 77 777 77 77" name="telephone" ngModel required #myPhone="ngModel">
+                <small class="text-danger" *ngIf="!myPhone.valid && myPhone.dirty">Invalid email</small> 
           </div>
           <div class="form-group">
-            <select class="custom-select" required>
-              <option value="">Profil</option>
-              <option value="1">ADMIN</option>
-              <option value="2">CM</option>
-              <option value="3">FORMATEUR</option>
-              <option value="3">APPRENANT</option>
+            <!--<select class="custom-select" name="profil" ngModel #myProfil="ngModel" required>-->
+            <select class="form-select" aria-label="disabled select example" name="profil" required>
+              <option selected>Profil</option>
+              <option  *ngFor="let result of profil" value="{{profil.id}}" name="{{profil.libelle | uppercase}}" ngModel required #myProfil="ngModel">{{result.libelle}}</option>
             </select>
-            <div class="invalid-feedback">Example invalid custom select feedback</div>
+            <!--<small class="text-danger" *ngIf="!myProfil.valid && myProfil.dirty">Invalid profil</small>-->
           </div>
          <div class="form-group w-100 col-md-6">
                 <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="customFile">
                     <label class="custom-file-label" for="customFile">Avatar</label>
+                    <input type="file" class="custom-file-input" id="customFile" name="avatar" ngModel required #myAvatar="ngModel">
                 </div>
          </div>
          <div class="form-group col-md-6">
