--- a/src/app/groupe-competence/list-groupe-competence/list-groupe-competence.component.html
+++ b/src/app/groupe-competence/list-groupe-competence/list-groupe-competence.component.html
@@ -18,8 +18,8 @@
             </div>
         </div>
         <div class="card-body">
-            <h5 class="card-title">{{element.descriptif}}{{i}}</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Description</h5>
+            <p class="card-text">{{element.descriptif}}{{i}}</p>
             <hr class="dropdown-divider">
             <div class="accordion" id="accordionExample{{i}}">
                 <div class="accordion-item">
