--- a/src/app/referentiel/list-referentiel/list-referentiel.component.html
+++ b/src/app/referentiel/list-referentiel/list-referentiel.component.html
@@ -1,6 +1,104 @@
-<button routerLink="add" type="button" class="btn btn-success m-5">Ajouter</button>
+
+    <button routerLink="add" type="button" class="btn btn-success m-5">Ajouter</button>
+
+    <div class="row ml-3">
+        <!--divider-->
+        <div class="card col-md-2 col-sm-2 col-xs-6 ml-5" *ngFor="let element of referentiel; let i = index" [attr.data-index]="i">
+            <div class="card-header">
+                <h5 class="mt-3">
+                    {{element.libelle}}
+                </h5>      
+                <div class="float-right">
+                    <button class="btn action" style="background-color: none !important;" routerLink="edit/{{element.id}}" (click)="Edit(element)">
+                        <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(255, 255, 255)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 14.66V20a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h5.34"></path><polygon points="18 2 22 6 12 16 8 16 8 12 18 2"></polygon></svg>
+                       </button> 
+                       <button class="btn action" style="background-color: none !important;" (click)="OnDelete(element.id)">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="4" stroke-linecap="square" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                    </button>
+                </div>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Présentation</h5>
+                <p class="card-text">{{element.presentation}}</p>
+                <hr class="dropdown-divider">
+                <div class="accordion" id="accordionExample{{i}}">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading{{i}}">
+                            <a class="accordion-button w-100" id="link" type="button" data-bs-toggle="collapse" 
+                            [attr.data-bs-target]="'#collapse'+i"  aria-expanded="false" [attr.aria-controls]="'collapse'+i">
+                            Groupe de compétences                            </a>
+                        </h2>
+                        <div id="collapse{{i}}" class="panel-collapse collapse show" [attr.aria-labelledby]="'heading'+i" [attr.data-bs-parent]="'#accordionExample'+i">
+                            <div class="accordion-body" *ngFor="let comp of element.groupecompetence">
+                                <h4>{{comp.libelle}}</h4>
+                                <hr class="dropdown-divider">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion" id="accordionExample{{i+100000}}">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne{{i+100000}}">
+                            <a class="accordion-button w-100" id="link" type="button" data-bs-toggle="collapse" 
+                            [attr.data-bs-target]="'#collapse'+(i+100000)"  aria-expanded="false" [attr.aria-controls]="'collapse'+(i+100000)">
+                                Programme
+                            </a>
+                        </h2>
+                        <div id="collapse{{i+100000}}" class="panel-collapse collapse show" [attr.aria-labelledby]="'headingOne'+(i+100000)" [attr.data-bs-parent]="'#accordionExample'+(i+100000)">
+                            <div class="accordion-body">
+                                <a class="justify-content-center ml-5" id="link"   routerLink="/referentiel">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="39" height="39" viewBox="0 0 24 24" fill="none" stroke="#098c7a" 
+                                    stroke-width="4" stroke-linecap="square" stroke-linejoin="round">
+                                    <path d="M3 15v4c0 1.1.9 2 2 2h14a2 2 0 0 0 2-2v-4M17 9l-5 5-5-5M12 12.8V2.5"/></svg><br/>
+                                 
+                                    <p class="mt-2 text-center">{{element.programme}}</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion" id="accordionExample{{i+200000}}">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne{{i+200000}}">
+                            <a class="accordion-button w-100" id="link" type="button" data-bs-toggle="collapse" 
+                            [attr.data-bs-target]="'#collapse'+(i+200000)"  aria-expanded="false" [attr.aria-controls]="'collapse'+(i+200000)">
+                            Critère d'évaluation                            </a>
+                        </h2>
+                        <div id="collapse{{i+200000}}" class="panel-collapse collapse show" [attr.aria-labelledby]="'headingOne'+(i+200000)" [attr.data-bs-parent]="'#accordionExample'+(i+200000)">
+                            <div class="accordion-body">
+                                <h4>{{element.critereEvaluation}}</h4>
+                                <hr class="dropdown-divider">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion" id="accordionExample{{i+300000}}">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne{{i+300000}}">
+                            <a class="accordion-button w-100" id="link" type="button" data-bs-toggle="collapse" 
+                            [attr.data-bs-target]="'#collapse'+(i+300000)"  aria-expanded="false" [attr.aria-controls]="'collapse'+(i+300000)">
+                            Critère d'admission
+                            </a>
+                        </h2>
+                        <div id="collapse{{i+300000}}" class="panel-collapse collapse show" [attr.aria-labelledby]="'headingOne'+(i+300000)" [attr.data-bs-parent]="'#accordionExample'+(i+300000)">
+                            <div class="accordion-body">
+                                <h4>{{element.critereAdmission}}</h4>
+                                <hr class="dropdown-divider">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </div>  
+    </div>
+    
+    
+    
+    
+
+<!--<button routerLink="add" type="button" class="btn btn-success m-5">Ajouter</button>
 <div class="row ml-3">
-    <!--divider-->
+    divider
     <div class="card col-md-2 col-sm-2 col-xs-6 ml-5" *ngFor="let element of referentiel">
         <div class="card-header">
             <h5>
@@ -26,4 +124,4 @@
             <h5>critere_evaluation {{element.critere_evaluation}}</h5>
         </div>
     </div>    
-</div>
+</div>-->
