--- a/src/app/referentiel/list-referentiel/list-referentiel.component.scss
+++ b/src/app/referentiel/list-referentiel/list-referentiel.component.scss
@@ -16,9 +16,28 @@
 h5
 {
     font-family: 'Salma';
-    font-size: 20px;
+    font-size: 25px;
 }
-a{
+#edit
+{
     text-decoration: white !important;
     color: white !important;
+}
+#link
+{
+    text-decoration: white !important;
+    background-color: white !important;
+    color: black;
+}
+#link:active
+{
+    color: black;
+}
+.action
+{
+    margin-top: -60px !important;
+}
+.justify-content-center
+{
+    margin-left: 80px !important;
 }
