--- a/src/app/competence/competence.component.html
+++ b/src/app/competence/competence.component.html
@@ -1,23 +1,1 @@
-
-<button routerLink="add" type="button" class="btn btn-success m-5">Ajouter</button>
-
-<div class="row">
-    <div class="col-md-4 col-sm-4 col-xs-12 p-2 item bg-light shadow p-3 mb-5 bg-white rounded" id="item">
-        <div class="form-group item-left">
-            <div class="form-group">
-                <select class="form-select" aria-label="disabled select example">
-                        <option *ngFor="let element of grpcomp" [ngValue]="element">{{element.libelle}}</option>
-               
-                </select>
-            </div>  
-            <div class="overflow-auto scroll">
-                  <div class="list-group" id="list-tab" role="tablist">
-                    <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="" role="tab" aria-controls="home" [routerLink]="['list']" *ngFor="let comp of grpcomp.competence">{{comp.libelle}}</a>
-                 </div>        
-        </div>
-    </div>
-    </div>
-    <div class="col-md-7 col-sm-7 col-xs-12 p-3  ml-2 bg-light shadow p-3 mb-5 bg-white rounded" id="item" >
-      <router-outlet></router-outlet>
-    </div>
-</div>
+<app-list-competence></app-list-competence>
