--- a/src/app/competence/edit-competence/edit-competence.component.html
+++ b/src/app/competence/edit-competence/edit-competence.component.html
@@ -1,1 +1,89 @@
-<p>edit-competence works!</p>
+<div class="container p-5 mt-5 w-30 ">
+    <form class="form-group" (ngSubmit)='OnSubmit(cPost)' #cPost="ngForm">
+        <!--<div class="form-group">
+            <label class="form-label"> Groupe de Compétence</label>
+            <select class="form-select" aria-label="disabled select example">
+                    <option selected>Développer le front d'une application</option>
+                    <option value="1">Développer le back d'une application</option>
+                    <option value="2">Administrateur base de données</option>
+                    <option value="3">Community manager</option>
+            </select>
+        </div>-->
+        <div class="form-group mt-5">
+            <label for="exampleFormControlInput1" class="form-label">Libellé</label>
+            <input class="form-control control" type="text" name="libelle" [(ngModel)]="result.libelle"  #myLibelle="ngModel">
+        </div>
+        <div class="w-100 h-100 mt-5">
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+               <li class="nav-item " role="presentation">
+                 <a class="nav-link " id="pills-home-tab" data-bs-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Niveau 1</a>
+               </li>
+               <li class="nav-item pl-2" role="presentation">
+                 <a class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Niveau 2</a>
+               </li>
+               <li class="nav-item pl-2" role="presentation">
+                 <a class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Niveau 3</a>
+               </li>
+             </ul>
+             <div class="tab-content mt-3" id="pills-tabContent">
+               <div class=" tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                 <div class="row">
+                    <div class="form-group mt-2">
+                      <label for="exampleFormControlInput1" class="form-label">Libellé</label>
+                      <input class="form-control control" type="text" placeholder="Libelle niveau 1" name="libelle1" [(ngModel)]="niveau1.libelle" #Niveau1="ngModel">
+                    </div>
+                   <div class="col-md-6 col-sm-6 col-xs-12 p-2 " id="niveau">
+                     <h3> Groupe d'action à réaliser 1</h3>
+                     <textarea class="form-control" placeholder="A partir d'un schéma physique de données et dans le contexte d'un besoin client décrit, créer une base de données sur un SGBD désigné..."
+                      id="floatingTextarea2" style="height: 100px" name="groupeAction1" [(ngModel)]="niveau1.groupeAction" required #myGrpAction1="ngModel"></textarea>
+                    </div>
+                   <div class="col-md-5 col-sm-5 col-xs-12 p-2 ml-2" id="niveau">
+                     <h3> Critére d'évaluation 1</h3>
+                     <textarea class="form-control" placeholder="La BD est créée à l'aide d'un script sans erreur et les données sont insérées à l'aide d'un script sans erreur..." 
+                     id="floatingTextarea2" style="height: 100px" name="critereEvalution1" [(ngModel)]="niveau1.critereEvalution"  #CritEval="ngModel"></textarea>
+                    </div>
+                 </div>
+               </div>
+               <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+                 <div class="row">
+                  <div class="form-group mt-2">
+                    <label for="exampleFormControlInput1" class="form-label">Libellé</label>
+                    <input class="form-control control" type="text" placeholder="Libelle niveau 2" name="libelle2" [(ngModel)]="niveau2.libelle"  #Niveau2="ngModel">
+                  </div>
+                   <div class="col-md-6 col-sm-6 col-xs-12 p-2 " id="niveau">
+                     <h3> Groupe d'action à réaliser 2</h3>
+                     <textarea class="form-control" placeholder="A partir d'un schéma physique de données et dans le contexte d'un besoin client décrit, créer une base de données sur un SGBD désigné..." 
+                     id="floatingTextarea2" style="height: 100px" name="groupeAction2" [(ngModel)]="niveau2.groupeAction"  #myGrpAction1="ngModel"></textarea>
+                   </div>
+                   <div class="col-md-5 col-sm-5 col-xs-12 p-2 ml-3" id="niveau">
+                     <h3> Critére d'évaluation 2</h3>
+                     <textarea class="form-control" placeholder="La BD est créée à l'aide d'un script sans erreur et les données sont insérées à l'aide d'un script sans erreur..." 
+                     id="floatingTextarea2" style="height: 100px" name="critereEvalution2" [(ngModel)]="niveau2.critereEvalution" #CritEval="ngModel"></textarea>
+                   </div>
+                 </div>
+               </div>
+               <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+                 <div class="row">
+                    <div class="form-group mt-2">
+                      <label for="exampleFormControlInput1" class="form-label">Libellé</label>
+                      <input class="form-control control" type="text" placeholder="Libelle niveau 3" name="libelle3" [(ngModel)]="niveau3.libelle" #Niveau3="ngModel">
+                    </div>
+                   <div class="col-md-6 col-sm-6 col-xs-12 p-2 " id="niveau">
+                     <h3> Groupe d'action à réaliser 3</h3>
+                     <textarea class="form-control" placeholder="A partir d'un schéma physique de données et dans le contexte d'un besoin client décrit, créer une base de données sur un SGBD désigné..." 
+                     id="floatingTextarea2" style="height: 100px" name="groupeAction3" [(ngModel)]="niveau3.groupeAction"  #myGrpAction1="ngModel"></textarea>
+                   </div>
+                   <div class="col-md-5 col-sm-5 col-xs-12 p-2 ml-3" id="niveau">
+                     <h3> Critére d'évaluation 3</h3>
+                     <textarea class="form-control" placeholder="La BD est créée à l'aide d'un script sans erreur et les données sont insérées à l'aide d'un script sans erreur..." 
+                     id="floatingTextarea2" style="height: 100px" name="critereEvalution3" [(ngModel)]="niveau3.critereEvalution"  #CritEval="ngModel"></textarea>
+                   </div>
+                 </div>
+               </div>
+             </div>
+       </div>
+       <div class="text-center mt-3">
+        <button type="submit" class="btn btn-outline-success btn-lg">Modifier</button>
+       </div>
+    </form>
+</div>
