--- a/src/app/competence/list-competence/list-competence.component.html
+++ b/src/app/competence/list-competence/list-competence.component.html
@@ -1,51 +1,113 @@
-<div class="w-100 h-100">
-     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-        <li class="nav-item " role="presentation">
-          <a class="nav-link " id="pills-home-tab" data-bs-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Niveau 1</a>
-        </li>
-        <li class="nav-item pl-2" role="presentation">
-          <a class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Niveau 2</a>
-        </li>
-        <li class="nav-item pl-2" role="presentation">
-          <a class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Niveau 3</a>
-        </li>
-      </ul>
-      <div class="tab-content" id="pills-tabContent">
-        <div class=" tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-          <div class="row">
-            <div class="col-md-6 col-sm-6 col-xs-12 p-2 " id="niveau">
-              <h3> Groupe d'action à réaliser 1</h3>
-              <p>A partir d'un schéma physique de données et dans le contexte d'un besoin client décrit, créer une base de données sur un SGBD désigné...</p>
-            </div>
-            <div class="col-md-5 col-sm-5 col-xs-12 p-2 ml-2" id="niveau">
-              <h3> Critére d'évaluation 1</h3>
-              <p>La BD est créée à l'aide d'un script sans erreur et les données sont insérées à l'aide d'un script sans erreur...</p>
-            </div>
-          </div>
+<button routerLink="add" type="button" class="btn btn-success m-5">Ajouter</button>
+
+<div class="row">
+    <div class="col-md-4 col-sm-4 col-xs-12 p-2 item bg-light shadow p-3 mb-5 bg-white rounded" id="item">
+        <div class="form-group item-left">
+            <div class="form-group">
+                <select class="form-select" aria-label="disabled select example" [(ngModel)]="id" (change)="GetId()">
+                        <option *ngFor="let element of grpcomp" value="{{element.id}}">{{element.libelle}}</option>
+               
+                </select>
+            </div>  
+            <div class="overflow-auto scroll">
+                  <div class="list-group" id="list-tab" role="tablist" *ngFor="let element of grpcompetence.competence" (click)="GetCompetence(element.id)">
+                    <div class="compt">
+                      <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" role="tab" aria-controls="home" >{{element.libelle}}</a>
+                    </div>
+                    <div class="float-right">
+                      <button class="btn action btn-warning" id="button1" routerLink="edit/{{element.id}}">
+                          <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(255, 255, 255)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 14.66V20a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h5.34"></path><polygon points="18 2 22 6 12 16 8 16 8 12 18 2"></polygon></svg>
+                         </button> 
+                         <button class="btn action  btn-danger ml-1" id="button1" (click)="OnDelete(element.id)">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="4" stroke-linecap="square" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                      </button>
+                  </div>
+            </div>        
         </div>
-        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-          <div class="row">
-            <div class="col-md-6 col-sm-6 col-xs-12 p-2 " id="niveau">
-              <h3> Groupe d'action à réaliser 2</h3>
-              <p>A partir d'un schéma physique de données et dans le contexte d'un besoin client décrit, créer une base de données sur un SGBD désigné...</p>
-            </div>
-            <div class="col-md-5 col-sm-5 col-xs-12 p-2 ml-3" id="niveau">
-              <h3> Critére d'évaluation 2</h3>
-              <p>La BD est créée à l'aide d'un script sans erreur et les données sont insérées à l'aide d'un script sans erreur...</p>
-            </div>
-          </div>
-        </div>
-        <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-          <div class="row">
-            <div class="col-md-6 col-sm-6 col-xs-12 p-2 " id="niveau">
-              <h3> Groupe d'action à réaliser 3</h3>
-              <p>A partir d'un schéma physique de données et dans le contexte d'un besoin client décrit, créer une base de données sur un SGBD désigné...</p>
-            </div>
-            <div class="col-md-5 col-sm-5 col-xs-12 p-2 ml-3" id="niveau">
-              <h3> Critére d'évaluation 3</h3>
-              <p>La BD est créée à l'aide d'un script sans erreur et les données sont insérées à l'aide d'un script sans erreur...</p>
-            </div>
-          </div>
-        </div>
-      </div>
+    </div>
+    </div>
+    <div class="col-md-7 col-sm-7 col-xs-12 p-3  ml-2 bg-light shadow p-3 mb-5 bg-white rounded" id="item" >
+        <div class="w-100 h-100">
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+               <li class="nav-item " role="presentation">
+                 <a class="nav-link " id="pills-home-tab" data-bs-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Niveau 1</a>
+               </li>
+               <li class="nav-item pl-2" role="presentation">
+                 <a class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Niveau 2</a>
+               </li>
+               <li class="nav-item pl-2" role="presentation">
+                 <a class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Niveau 3</a>
+               </li>
+             </ul>
+              <h2 *ngIf="!ok">{{error}}</h2>
+              <div *ngIf="ok">
+                  <div class="tab-content" id="pills-tabContent">
+                    <div class=" tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+                      <div class="row">
+                        <div class="col-md-6 col-sm-6 col-xs-12 p-2 " id="niveau">
+                          <h3> Groupe d'action à réaliser 1</h3>
+                          <p>{{niveau1.groupeAction}}</p> 
+                          
+                        </div>
+                        <div class="col-md-5 col-sm-5 col-xs-12 p-2 ml-2" id="niveau">
+                          <h3> Critére d'évaluation 1</h3>
+                          <p>{{niveau1.critereEvalution}}</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+                      <div class="row">
+                        <div class="col-md-6 col-sm-6 col-xs-12 p-2 " id="niveau">
+                          <h3> Groupe d'action à réaliser 2</h3>
+                          <p>{{niveau2.groupeAction}}</p>                        
+                        </div>
+                        <div class="col-md-5 col-sm-5 col-xs-12 p-2 ml-3" id="niveau">
+                          <h3> Critére d'évaluation 2</h3>
+                          <p>{{niveau2.critereEvalution}}</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+                      <div class="row">
+                        <div class="col-md-6 col-sm-6 col-xs-12 p-2 " id="niveau">
+                          <h3> Groupe d'action à réaliser 3</h3>
+                          <p>{{niveau3.groupeAction}}</p>  
+                        </div>
+                        <div class="col-md-5 col-sm-5 col-xs-12 p-2 ml-3" id="niveau">
+                          <h3> Critére d'évaluation 3</h3>
+                          <p>{{niveau3.critereEvalution}}</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+               </div>
+       </div>
+       
+    </div>
+</div>
+<div class="wrapper justify-content-center m-3 p-4">
+  <h1 class="text-center title">LES COMPETENCES INCOMPLETES</h1>
+  <table id="example" class="table table-striped table-bordered" style="width:100%">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Libellé</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody *ngFor="let element of Comp">
+        <tr *ngIf="element.niveau.length<=0" >
+            <td>{{ element.id}}</td>
+            <td>{{ element.libelle}}</td>
+            <td>
+              <button class="btn action btn-warning" id="button1" routerLink="edit/{{element.id}}">
+                <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(255, 255, 255)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 14.66V20a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h5.34"></path><polygon points="18 2 22 6 12 16 8 16 8 12 18 2"></polygon></svg>
+               </button> 
+               <button class="btn action  btn-danger ml-1" id="button1" (click)="OnDelete(element.id)">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="4" stroke-linecap="square" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+            </button>
+            </td>
+        </tr>
+    </tbody>
+</table>
 </div>
